# ojph

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE.txt  README.md  make_refdiff_demo.py  make_refdiff_kdu.py  make_refdiff_kdu_r1x1.py  make_refdiff_ojph_refdiff.py  pyproject.toml  setup.py
.github/workflows/: pypi.yaml  tests.yml  wheels.yml
examples/: view_tiff_page.py
ojph/: __init__.py  _imread.py  _imwrite.py  _version.py  ojph_bindings.cpp
ojph/cli/: __init__.py  dump.py
tests/: test_flags_integration.py  test_imread_failures.py  test_imread_from_memory.py  test_lossless_compression.py  test_memory_compression.py  test_odirect.py  test_package.py  test_progression_order.py  test_read_j2c_into.py
tools/: build_openjph.py
