[build-system]
requires = ["setuptools>=42", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
# Python 3.12, 3.13, 3.14, plus 3.14 free-threading. Free-threaded interpreters
# are a standard build in cibuildwheel v4; the `cp314t-*` selector opts them in.
build = ["cp312-*", "cp313-*", "cp314-*", "cp314t-*"]
# We ship manylinux (glibc) wheels only; musllinux is not a requested target.
# (PyPy/GraalPy are not enabled by default, so they need no explicit skip.)
skip = ["*-musllinux*"]

# Build a static OpenJPH once per platform before any wheel, then statically
# link it (see tools/build_openjph.py and setup.py). CMake/Ninja are provided
# on the host by the workflow (get-cmake); inside the manylinux container we
# install them with pip (see [tool.cibuildwheel.linux]).
before-all = "python {project}/tools/build_openjph.py"

# Forward the version string (computed from git in the workflow) into the
# manylinux build container, where the .git directory is not available.
environment-pass = ["OJPH_GIT_DESCRIBE"]

test-requires = ["pytest", "numpy"]
# Copy the test suite into cibuildwheel's isolated test dir and run it from
# there. Running ``pytest {project}/tests`` instead would put the project root
# on sys.path (tests/ is a package), shadowing the *installed* wheel with the
# uncompiled source tree ("No module named 'ojph.ojph_bindings'").
test-sources = ["tests"]
test-command = "pytest tests"
# Skip tests we can't (reliably) run on the build host:
#  - free-threaded interpreters and Windows/ARM64: numpy may not ship a wheel;
#  - macosx_x86_64: cross-compiled on Apple Silicon, so it'd need Rosetta.
# The wheels themselves are still built and published for these targets.
test-skip = ["cp314t-*", "*-win_arm64", "*-macosx_x86_64"]

[tool.cibuildwheel.linux]
# manylinux containers don't ship CMake/Ninja; grab them from PyPI.
before-all = "pip install cmake ninja && python {project}/tools/build_openjph.py"
